--- a/index.html
+++ b/index.html
@@ -198,6 +198,32 @@
                 padding: 0 30px 20px;
                 color: #6c757d;
                 font-size: 1.05em;
+                display: flex;
+                align-items: center;
+                justify-content: space-between;
+                flex-wrap: wrap;
+                gap: 12px;
+            }
+
+            .results-actions {
+                display: flex;
+                gap: 10px;
+            }
+
+            .results-actions button {
+                padding: 8px 16px;
+                cursor: pointer;
+                border: 2px solid #667eea;
+                background: white;
+                color: #667eea;
+                border-radius: 6px;
+                font-size: 0.95em;
+                font-weight: 600;
+            }
+
+            .results-actions button:disabled {
+                opacity: 0.5;
+                cursor: not-allowed;
             }
 
             @media (max-width: 768px) {
@@ -215,6 +241,125 @@
 
                 .search-box {
                     font-size: 1em;
+                }
+            }
+
+            @page {
+                margin: 10mm;
+            }
+
+            @media print {
+                body {
+                    background: white;
+                    padding: 0;
+                    font-size: 11px;
+                    line-height: 1.35;
+                }
+
+                .container {
+                    max-width: none;
+                    box-shadow: none;
+                    border-radius: 0;
+                    margin: 0;
+                    border: none;
+                }
+
+                .header {
+                    background: white;
+                    color: #111;
+                    text-align: left;
+                    padding: 8px 0;
+                }
+
+                .header h1 {
+                    font-size: 1.35em;
+                    margin-bottom: 2px;
+                }
+
+                .header p {
+                    font-size: 0.9em;
+                    opacity: 1;
+                    color: #444;
+                }
+
+                .search-container,
+                .results-count,
+                .results-actions,
+                .toggle-icon,
+                .no-results {
+                    display: none !important;
+                }
+
+                .content {
+                    padding: 0;
+                    column-count: 2;
+                    column-gap: 18px;
+                    column-fill: auto;
+                    column-rule: none;
+                }
+
+                .topic-card {
+                    border: none;
+                    margin: 4px 0 10px;
+                    padding: 0 2px;
+                    break-inside: avoid-column;
+                    page-break-inside: avoid;
+                }
+
+                .topic-header {
+                    background: white;
+                    color: #111;
+                    cursor: default;
+                    padding: 0 0 3px 4px;
+                    font-size: 0.95em;
+                    border: none;
+                    margin-bottom: 3px;
+                }
+
+                .topic-title {
+                    font-size: 0.95em;
+                    font-weight: 600;
+                    text-transform: uppercase;
+                }
+
+                .topic-content {
+                    max-height: none !important;
+                    padding: 0 0 6px 4px !important;
+                    overflow: visible !important;
+                }
+
+                .topic-content > ul {
+                    list-style: disc;
+                    padding-left: 14px;
+                    margin: 0;
+                }
+
+                .topic-content > ul > li {
+                    margin-bottom: 5px;
+                    font-size: 0.85em;
+                    line-height: 1.25;
+                    padding-left: 0;
+                    position: static;
+                    list-style-position: outside;
+                }
+
+                .topic-content > ul > li:before {
+                    display: none;
+                }
+
+                .topic-content ul ul {
+                    margin-top: 3px;
+                    padding-left: 12px;
+                    list-style: disc;
+                    list-style-position: outside;
+                    list-style-type: circle;
+                }
+
+                .topic-content ul ul li {
+                    margin-bottom: 3px;
+                    font-size: 0.8em;
+                    position: relative;
+                    padding-left: 0;
                 }
             }
         </style>
@@ -887,39 +1032,10 @@
                                     <div className="results-count">
                                         Showing {filteredTopics.length} of {workshopData.length} topics
                                         {filteredTopics.length > 0 && (
-                                            <span style={{ marginLeft: "20px" }}>
-                                                <button
-                                                    onClick={expandAll}
-                                                    style={{
-                                                        padding: "8px 16px",
-                                                        marginRight: "10px",
-                                                        cursor: "pointer",
-                                                        border: "2px solid #667eea",
-                                                        background: "white",
-                                                        color: "#667eea",
-                                                        borderRadius: "6px",
-                                                        fontSize: "0.95em",
-                                                        fontWeight: "600",
-                                                    }}
-                                                >
-                                                    Expand All
-                                                </button>
-                                                <button
-                                                    onClick={collapseAll}
-                                                    style={{
-                                                        padding: "8px 16px",
-                                                        cursor: "pointer",
-                                                        border: "2px solid #667eea",
-                                                        background: "white",
-                                                        color: "#667eea",
-                                                        borderRadius: "6px",
-                                                        fontSize: "0.95em",
-                                                        fontWeight: "600",
-                                                    }}
-                                                >
-                                                    Collapse All
-                                                </button>
-                                            </span>
+                                            <div className="results-actions">
+                                                <button onClick={expandAll}>Expand All</button>
+                                                <button onClick={collapseAll}>Collapse All</button>
+                                            </div>
                                         )}
                                     </div>
                                     {filteredTopics.map((topic, index) => (
