--- a/index.html
+++ b/index.html
@@ -311,8 +311,8 @@
                 body {
                     background: white;
                     padding: 0;
-                    font-size: 11px;
-                    line-height: 1.35;
+                    font-size: 12px;
+                    line-height: 1.45;
                 }
 
                 .container {
@@ -334,12 +334,12 @@
                 }
 
                 .header h1 {
-                    font-size: 1.35em;
-                    margin-bottom: 2px;
+                    font-size: 1.45em;
+                    margin-bottom: 4px;
                 }
 
                 .header p {
-                    font-size: 0.9em;
+                    font-size: 1em;
                     opacity: 1;
                     color: #444;
                 }
@@ -352,7 +352,7 @@
 
                 .header .site-link {
                     margin-top: 4px;
-                    font-size: 0.85em;
+                    font-size: 0.95em;
                     color: #333;
                 }
 
@@ -399,14 +399,14 @@
                     background: white;
                     color: #111;
                     cursor: default;
-                    padding: 0 0 3px 4px;
-                    font-size: 0.95em;
+                    padding: 0 0 4px 4px;
+                    font-size: 1.05em;
                     border: none;
                     margin-bottom: 3px;
                 }
 
                 .topic-title {
-                    font-size: 0.95em;
+                    font-size: 1.05em;
                     font-weight: 600;
                     text-transform: uppercase;
                 }
@@ -425,8 +425,8 @@
 
                 .topic-content > ul > li {
                     margin-bottom: 5px;
-                    font-size: 0.85em;
-                    line-height: 1.25;
+                    font-size: 0.95em;
+                    line-height: 1.35;
                     padding-left: 0;
                     position: static;
                     list-style-position: outside;
@@ -445,7 +445,7 @@
 
                 .topic-content ul ul li {
                     margin-bottom: 3px;
-                    font-size: 0.8em;
+                    font-size: 0.9em;
                     position: relative;
                     padding-left: 0;
                 }
@@ -517,7 +517,7 @@
                 },
 
                 {
-                    printSkipSection: true,
+                    printSkipSection: false,
                     title: "📶 WiFi vs. Cellular Data",
                     content: [
                         {
@@ -579,7 +579,7 @@
                 },
 
                 {
-                    printSkipSection: true,
+                    printSkipSection: false,
                     title: "📋 Cell Phone Plans and Features",
                     content: [
                         {
@@ -697,7 +697,7 @@
                 },
 
                 {
-                    printSkipSection: true,
+                    printSkipSection: false,
                     title: "🔊 Bluetooth Basics",
                     content: [
                         {
@@ -1007,7 +1007,7 @@
                 },
 
                 {
-                    printSkipSection: true,
+                    printSkipSection: false,
                     title: "🚫 Scam Calls and Texts",
                     content: [
                         {
