--- a/index.html
+++ b/index.html
@@ -97,6 +97,33 @@
                 border-bottom: 2px solid #e9ecef;
             }
 
+            .search-inner {
+                display: flex;
+                align-items: center;
+                gap: 12px;
+            }
+
+            .clear-search {
+                padding: 8px 16px;
+                cursor: pointer;
+                border: 2px solid #667eea;
+                background: white;
+                color: #667eea;
+                border-radius: 6px;
+                font-size: 0.95em;
+                font-weight: 600;
+            }
+
+            .clear-search:hover {
+                background: #667eea;
+                color: white;
+            }
+
+            .clear-search:focus {
+                outline: none;
+                box-shadow: 0 0 0 4px rgba(102, 126, 234, 0.25);
+            }
+
             .search-box {
                 width: 100%;
                 padding: 18px 24px;
@@ -274,6 +301,16 @@
                     flex-direction: column;
                     align-items: center;
                     text-align: center;
+                }
+
+                .search-inner {
+                    flex-direction: column;
+                    align-items: stretch;
+                    gap: 10px;
+                }
+
+                .clear-search {
+                    align-self: stretch;
                 }
 
                 .header h1 {
@@ -1355,7 +1392,7 @@
                     <div className="container">
                         <div className="header">
                             <div className="header-text">
-                                <h1>📱 Cellphone Workshop</h1>
+                                <h1>📱 Cellphone Workshop Guide</h1>
                                 <div className="site-link">
                                     <a href="https://cfw.davemo.com" target="_blank" rel="noopener noreferrer">
                                         cfw.davemo.com
@@ -1368,13 +1405,20 @@
                         </div>
 
                         <div className="search-container">
-                            <input
-                                type="text"
-                                className="search-box"
-                                placeholder="🔍 Search topics... (e.g., 'security', 'photos', 'WiFi')"
-                                value={searchTerm}
-                                onChange={(e) => setSearchTerm(e.target.value)}
-                            />
+                            <div className="search-inner">
+                                <input
+                                    type="text"
+                                    className="search-box"
+                                    placeholder="🔍 Search topics... (e.g., 'security', 'photos', 'WiFi')"
+                                    value={searchTerm}
+                                    onChange={(e) => setSearchTerm(e.target.value)}
+                                />
+                                {searchTerm && (
+                                    <button className="clear-search" onClick={() => setSearchTerm("")} type="button">
+                                        Clear
+                                    </button>
+                                )}
+                            </div>
                         </div>
 
                         <div className="content">
